cmake_minimum_required(VERSION 2.8)
find_package(CUDA REQUIRED)
find_package(GLEW)
#find_path(FREEGLUT_INCLUDE_DIR NAMES GL/freeglut.h)
#find_package(FREEGLUT_LIBRARY NAMES freeglut freeglut_static)
#find_package(FREEGLUT)
message("-- CUDA --")
message("Version: " ${CUDA_VERSION})
message("Library: " ${CUDA_CUDA_LIBRARY})
message("Runtime: " ${CUDA_CUDART_LIBRARY})
IF(NOT GLEW_FOUND)
	FIND_LIBRARY(GLEW_LIBRARY NAMES glew32 glew32.dll PATHS "./common/lib/Win32")
	FIND_PATH(GLEW_INCLUDE_DIR glew.h "./common/inc/GL")
ENDIF(NOT GLEW_FOUND)
#if(not freeglut_found)
	message("hogehoge")
	FIND_LIBRARY(FREEGLUT_LIBRARY NAMES freeglut freeglut.dll PATHS "./common/lib/Win32")
	FIND_PATH(FREEGLUT_INCLUDE_DIR freeglut.h "./common/inc/GL")
#endif(not freeglut_found)
include_directories(common/inc)
add_subdirectory(3_Imaging)
link_directories(./common/lib/Win32/)
#TARGET_LINK_LIBRARIES(freeglut ./common/lib/Win32/freeglut.lib)
#cuda_add_executable(vectorAdd vectorAdd.cu)
