cmake_minimum_required(VERSION 2.8)
find_package(CUDA REQUIRED)
if(UNIX)
	find_package(GLEW)
	IF(NOT GLEW_FOUND)
		find_library(GLEW_LIBRARY NAMES GLEW glew HINTS "${CMAKE_SOURCE_DIR}/common/lib/linux/${CMAKE_SYSTEM_PROCESSOR}")
		message("-- GLEW alternative: " ${GLEW_LIBRARY})
	ELSE(GLEW_FOUND)
		message("-- GLEW: " ${GLEW_LIBRARY})
	ENDIF(NOT GLEW_FOUND)
endif(UNIX)
message("-- CUDA --")
message("-- Version: " ${CUDA_VERSION})
message("-- Library: " ${CUDA_CUDA_LIBRARY})
message("-- Runtime: " ${CUDA_CUDART_LIBRARY})
include_directories(common/inc)
add_subdirectory(3_Imaging)
